<resources>
    <string name="app_name">Eat\'em Up</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="will_expire_in">will expire in</string>
    <string name="days">day(s)</string>
    <string name="itemName">Name: </string>
    <string name="itemCategory">Suggested match: </string>
    <string name="expireDate">Suggested expiry: </string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="days_left"><font size="30">Days left</font></string>
    <string name="name"><font size="30">Name</font></string>
    <string name="inventory">inventory</string>
    <string name="defaultHour">17</string>
    <string name="defaultMinute">30</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_info">Eat\'em Up! is an app which helps you keep track of all your food and reminds you when it is going to expire. You can add items either by scanning a receipt or manually, and the our algorithm automatically matches the scanned item and suggests an expiry date if matched.
        \n\nThe app also allows to add item(s) from inventory list to shopping list by long pressing and selecting them.
        \n\nThe app also suggests recipes for items which are going to expire soon.
        \n\nAlthough the default time for a notification reminder is set to 5:30pm, the user can change this whenever they want.</string>
    <!--<string name="about_inventory">2 Ways to add to inventory list: \n  \u0020 1.Scan a receipt using the camera. \n   \u0020 2.Click on the add button the main screen to add an item</string>-->
    <!--<string name="about_setting">\u0020 \u0020 The notification will default to 5:30PM daily (if there are items expired/expiring soon). You can change this in the settings.</string>-->

    <string name="about_developers">Developed by Biting Bulldogs</string>
    <string name="empty_recipe">There are no recipes to display!</string>
    <string name="shopping">Shopping List</string>
    <string name="recipe">Recipes</string>
    <string name="clear">Clear</string>
</resources>
