<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="350dp"
android:layout_height="250dp"
android:layout_gravity="center"
android:background="@android:color/white"
android:id="@+id/dialog">


<EditText
    android:id="@+id/dialog_name"
    android:autofillHints=""
    android:hint="@string/name"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:inputType="text"
    android:textSize="40sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.05" />

<EditText
    android:id="@+id/dialog_date"
    android:autofillHints=""
    android:hint="@string/days_left"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:inputType="date"
    android:textSize="40sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.33"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dialog_name"
    app:layout_constraintVertical_bias="0.088" />

<Button
    android:id="@+id/button_no_update"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/cancel"
    android:onClick="noUpdate"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="52dp"

    app:layout_constraintEnd_toStartOf="@+id/button_update"
    app:layout_constraintHorizontal_bias="0.516"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dialog_date" />

<Button
    android:id="@+id/button_update"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/update"
    android:onClick="updateInventory"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="44dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dialog_date" />


</android.support.constraint.ConstraintLayout>