<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:id="@+id/scanlist">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView

                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/autour_one"
                android:layout_centerVertical="true"
                android:text="Scanned Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scan_checkbox"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorWhite"
                android:onClick="setCheck"/>
        </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/scan_name"
                    android:layout_margin="10dp"
                    android:gravity="bottom"
                    android:textSize="20sp"
                    android:text="@string/itemName" />
                <EditText
                    android:id="@+id/rv_scanname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="100dp"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="start"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="bottom"
                    android:textSize="20sp"
                    android:text="@string/itemCategory" />
                <EditText
                    android:id="@+id/rv_scancat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="100dp"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="start"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="bottom"
                    android:textSize="20sp"
                    android:text="@string/expireDate" />
                <EditText
                    android:id="@+id/rv_scandate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="0dp"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:gravity="start"/>
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:textSize="20sp"
                    android:text=" days"/>
            </LinearLayout>
        </LinearLayout>





</android.support.v7.widget.CardView>